--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,17 @@
 # mod_deflate(gzip圧縮配信)の設定
 <IfModule mod_deflate.c>
-  AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript
+  AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css
+  text/javascript application/javascript application/x-javascript
 </IfModule>
+
+# ブラウザキャッシュを有効にする設定
+<ifModule mod_expires.c>
+  ExpiresActive On ExpiresDefault "access plus 7 days" ExpiresByType text/css
+  "access plus 7 days" ExpiresByType text/javascript "access plus 7 days"
+  ExpiresByType application/javascript "access plus 7 days" ExpiresByType
+  application/x-javascript "access plus 7 days" ExpiresByType text/html "access
+  plus 3 hours" ExpiresByType image/jpeg "access plus 1 month" ExpiresByType
+  image/png "access plus 1 month" ExpiresByType image/gif "access plus 1 month"
+  ExpiresByType image/svg+xml "access plus 1 month" ExpiresByType image/webp
+  "access plus 1 month"
+</ifModule>
